# vascular-cfd-pipeline

./: .gitignore  README.md
BraVa_share/: BH0036_L.csv  BH0040_R.csv
BraVa_share/c/: BG0010_R.csv  BG0017_R.csv  BH0006_L.csv  BH0010_L.csv
BraVa_share/s/: BG0011_R.csv  BH0011_R.csv  BH0018_R.csv  BH0019_L.csv  BH0035_R.csv  BH0036_R.csv
BraVa_share/u/: BG0001_L.csv  BG0004_L.csv  BG0004_R.csv  BG0006_L.csv  BG0006_R.csv  BG0007_R.csv  BG0008_L.csv  BG0008_R.csv  BG0009_L.csv  BG0009_R.csv  BG0010_L.csv  BG0011_L.csv  BG0012_L.csv  BG0017_L.csv  BG0018_L.csv  BG0018_R.csv  BG0019_L.csv  BG0019_R.csv  BG0020_L.csv  BG0020_R.csv  BG0021_R.csv  BG0022_L.csv  BG0022_R.csv  BH0005_L.csv  BH0005_R.csv  BH0009_L.csv  BH0009_R.csv  BH0010_R.csv  BH0011_L.csv  BH0013_L.csv  BH0013_R.csv  BH0014_L.csv  BH0014_R.csv  BH0016_L.csv  (+24 more)
TubeFromCenterline/: .gitignore  README.md  TubeFromCenterline.cpp
batch/: README.md  batch_auto.py  batch_cases.csv  batch_csv.py
docs/: README.md  memo.md
docs/fugaku/: README.md  build_gmsh.sh  pyproject.toml  run_python_gmsh.sh
docs/fugaku/OpenFOAM/simpleFoam_fixedFlowRate_gmshParallel/: README.md  run.sh
docs/fugaku/OpenFOAM/simpleFoam_fixedFlowRate_gmshParallel/0/: U  p
docs/fugaku/OpenFOAM/simpleFoam_fixedFlowRate_gmshParallel/constant/: turbulenceProperties
docs/fugaku/OpenFOAM/simpleFoam_fixedFlowRate_gmshParallel/system/: decomposeParDict  meshQualityDict
docs/fugaku/environment/: Build_OpenFOAM_on_Fugaku.md  README.md  build_gmsh.sh  run_python_gmsh.sh  spack.md
meshing_deform/: README.md  pyproject.toml  requirements.txt
(+82 files in other folders)
