[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshing-deform"
version = "0.1.0"
description = "Meshing and deformation tools for CFD batch pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.3.4",
  "scipy>=1.16.3",
  "pandas>=2.3.3",
  "vtk>=9.5.2",
  "pyvista>=0.46.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
